<resources>
    <string name="app_name">Novel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="novel_intro_separated">&#160;|&#160;</string>
    <string name="transition_novel_cover">transitionNovelCover</string>
    <string name="transition_novel_list_item">transitionNovelListItem</string>
    <string name="transition_book_list_item">transitionBookListItem</string>
    <string name="transition_book_list_title">transitionBookListTitle</string>


    <string name="navigation_item_book_shelf">书架</string>
    <string name="navigation_item_classification">分类</string>
    <string name="navigation_item_ranking">排行榜</string>
    <string name="navigation_item_theme_book_list">主题书单</string>
    <string name="novel_unit">本</string>
    <string name="classify_tab_all">全部</string>
    <string name="classify_tab_to_be_continued">连载中</string>
    <string name="classify_tab_is_over">已完结</string>

    <string name="classification_tab_name_male">男生</string>
    <string name="classification_tab_name_female">女生</string>
    <string name="theme_book_tab_name_my_collect">我的收藏</string>
    <string name="theme_book_tab_name_hot">本周最热</string>
    <string name="theme_book_tab_name_latest_posts">最新发布</string>
    <string name="theme_book_tab_name_most_collect">最多收藏</string>
    <string name="network_failure_hint_text">请检查网络连接,然后重试</string>
    <string name="network_failure_btn_retry_text">重试</string>
    <string name="novel_add_book_rack">加入书架</string>
    <string name="novel_remove_book_rack">移出书架</string>
    <string name="book_list_collect">收藏</string>
    <string name="book_list_already_collected">已收藏</string>
    <string name="collectCountText">人收藏</string>
    <string name="latelyFollowerText">人在追</string>
    <string name="novel_start_reading_book">开始阅读</string>
    <string name="novel_intro_follower_count_suffix">人看过</string>
    <string name="date_updated_suffix">&#160;更新</string>

    <string name="dialog_message_wait">请稍等...</string>
    <string name="bookshelf_add_novel_text">添加你喜欢的小说</string>
    <string name="theme_book_list_empty_hint">添加你喜欢的书单</string>
    <string name="book_list_details_text">书单详情</string>
</resources>
