<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@id/navigation_item_bookcase"
            android:checked="true"
            android:icon="@mipmap/ic_navigation_item_bookshelf"
            android:title="@string/navigation_item_book_shelf"/>
        <item
            android:id="@id/navigation_item_ranking"
            android:icon="@mipmap/ic_navigation_item_ranking"
            android:title="@string/navigation_item_ranking"/>
        <item
            android:id="@id/navigation_item_theme_book_list"
            android:icon="@mipmap/ic_navigation_item_book_list"
            android:title="@string/navigation_item_theme_book_list"/>
        <item
            android:id="@id/navigation_item_classification"
            android:icon="@mipmap/ic_navigation_item_classification"
            android:title="@string/navigation_item_classification"/>
    </group>
</menu>